# embed-test

./: .editorconfig  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md
.github/workflows/: cmake-multi-platform.yml
cmake/: Bootstrap.cmake  CompilerConfig.cmake  Utils.cmake
cmake/toolchains/: common-gcc.cmake  pico-common-gcc.cmake  pico-rp2040-gcc.cmake  pico-rp2350-gcc.cmake
src/sample/: CMakeLists.txt  addsub.c  addsub_armv6m.s  addsub_armv8m.s  assertion.c  assertion.h  macro.h  macro_impl.h  test.c  test.h
